--- a/css/home.css
+++ b/css/home.css
@@ -8,14 +8,14 @@
 
   .img-cover {
     display: block;
-    height: 30rem;
+    height: 25rem;
     width: 100%;
     object-fit: cover;
   }
 
   .img-avatar {
-    height: 18rem;
-    width: 18rem;
+    height: 16rem;
+    width: 16rem;
     border-radius: 100%;
     object-fit: cover;
     transition: transform 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -42,10 +42,53 @@
     padding-inline: 3.2rem;
     max-width: 89.6rem;
     overflow: hidden;
-  }
 
-  .assignment-list {
-    margin-top: 2.4rem;
-    list-style: none;
+    h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      line-height: 2;
+      text-transform: capitalize;
+    }
+
+    .assignment-list {
+      margin-top: 2.4rem;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      gap: 1.4rem;
+
+      li {
+        font-size: 1.4rem;
+        font-weight: 500;
+        color: #333;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 0.5rem;
+        padding: 2.4rem 1rem;
+        box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
+        margin-bottom: 0.5rem;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        position: relative;
+        transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+        a {
+          text-decoration: none;
+          color: #555;
+          width: 100%;
+
+          &::after {
+            content: "\2192";
+            position: absolute;
+            top: 40%;
+            right: 1.2rem;
+          }
+        }
+
+        &:hover {
+          background-color: #f7f3f3;
+        }
+      }
+    }
   }
 }
