--- a/lab2/css/styleMe.css
+++ b/lab2/css/styleMe.css
@@ -55,38 +55,47 @@
       column-gap: 1rem;
 
       .card {
-        width: 38rem;
         background-color: #fff;
         border-radius: 0.5rem;
         overflow: hidden;
         box-shadow: 0 1rem 2.5rem rgba(0, 0, 0, 0.1);
-      }
+        transition: transform 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
 
-      .card figure img {
-        width: 100%;
-        height: 56rem;
-        display: block;
-      }
+        & figure {
+          overflow: hidden;
+        }
 
-      .card-body {
-        padding: 1.6rem;
-      }
+        & figure img {
+          width: 100%;
+          height: 56rem;
+          display: block;
+        }
 
-      .card-title {
-        font-size: 2.4rem;
-        margin-bottom: 0.8rem;
-      }
+        &:hover {
+          cursor: pointer;
+          transform: translateY(-1rem);
+        }
 
-      .imdb-rating {
-        font-size: 1.4rem;
-        font-weight: bold;
-        color: #f5c518;
-        margin-bottom: 1.6rem;
-      }
+        .card-body {
+          padding: 1.6rem;
 
-      .card-body p {
-        font-size: 1.4rem;
-        color: #333;
+          & p {
+            font-size: 1.4rem;
+            color: #333;
+          }
+        }
+
+        .card-title {
+          font-size: 2.4rem;
+          margin-bottom: 0.8rem;
+        }
+
+        .imdb-rating {
+          font-size: 1.4rem;
+          font-weight: bold;
+          color: #f5c518;
+          margin-bottom: 1.6rem;
+        }
       }
     }
   }
