feat: added media queries

--- a/css/general.css
+++ b/css/general.css
@@ -126,3 +126,10 @@ footer {
   width: 100%;
   transform-origin: left;
 }
+
+@media screen and (max-width: 44em) {
+  html {
+    /* 56.25% === 9px */
+    font-size: 50%;
+  }
+}
