--- a/css/home.css
+++ b/css/home.css
@@ -92,3 +92,10 @@
 .assignment-list li:hover {
   background-color: #f7f3f3;
 }
+
+@media screen and (max-width: 44em) {
+  .img-avatar {
+    height: 14rem;
+    width: 14rem;
+  }
+}
