--- a/lab2/css/styleMe.css
+++ b/lab2/css/styleMe.css
@@ -1,230 +1,215 @@
-.section-introduction {
-  h1 {
-    text-transform: uppercase;
-    font-size: 3.6rem;
-    font-weight: bold;
-    margin-bottom: 1.6rem;
-  }
+.section-introduction h1 {
+  text-transform: uppercase;
+  font-size: 3.6rem;
+  font-weight: bold;
+  margin-bottom: 1.6rem;
+}
 
-  p {
-    font-size: 1.6rem;
-    line-height: 1.8;
-    letter-spacing: 0.75px;
+.section-introduction p {
+  font-size: 1.6rem;
+  line-height: 1.8;
+  letter-spacing: 0.75px;
+}
 
-    &::first-letter {
-      font-size: 2rem;
-    }
-  }
+.section-introduction p::first-letter {
+  font-size: 2rem;
 }
 
 .section-tabs {
   margin-top: 3rem;
+}
 
-  .tabs {
-    overflow: hidden;
-    background: #f1f1f1;
-    display: flex;
+.section-tabs .tabs {
+  overflow: hidden;
+  background: #f1f1f1;
+  display: flex;
+}
 
-    .tab {
-      background-color: inherit;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      text-align: center;
-      font-size: 1.6rem;
-      font-weight: 600;
-      padding: 1.4rem 1.6rem;
-      transition: background-color 0.3s;
+.section-tabs .tabs .tab {
+  background-color: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding: 1.4rem 1.6rem;
+  transition: background-color 0.3s;
+}
 
-      &:hover {
-        background-color: #ddd;
-      }
-    }
+.section-tabs .tabs .tab:hover {
+  background-color: #ddd;
+}
 
-    .tab-active,
-    .tab:active {
-      background-color: #ccc;
-    }
-  }
+.section-tabs .tabs .tab-active,
+.section-tabs .tabs .tab:active {
+  background-color: #ccc;
+}
 
-  .tab-content {
-    padding-block: 2.4rem;
-    border-top: none;
-  }
+.section-tabs .tab-content {
+  padding-block: 2.4rem;
+  border-top: none;
+}
 
-  #movies {
-    .movie-list {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      row-gap: 1.6rem;
-      column-gap: 1rem;
+#movies .movie-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.6rem;
+  column-gap: 1rem;
+}
 
-      .card {
-        background-color: #fff;
-        border-radius: 0.5rem;
-        overflow: hidden;
-        box-shadow: 0 1rem 2.5rem rgba(0, 0, 0, 0.1);
-        transition: transform 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
+#movies .movie-list .card {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: 0 1rem 2.5rem rgba(0, 0, 0, 0.1);
+  transition: transform 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
 
-        & figure {
-          overflow: hidden;
-        }
+#movies .movie-list .card figure {
+  overflow: hidden;
+}
 
-        & figure img {
-          width: 100%;
-          height: 56rem;
-          display: block;
-        }
+#movies .movie-list .card figure img {
+  width: 100%;
+  height: 56rem;
+  display: block;
+}
 
-        &:hover {
-          cursor: pointer;
-          transform: translateY(-1rem);
-        }
+#movies .movie-list .card:hover {
+  cursor: pointer;
+  transform: translateY(-1rem);
+}
 
-        .card-body {
-          padding: 1.6rem;
+#movies .movie-list .card .card-body {
+  padding: 1.6rem;
+}
 
-          & p {
-            font-size: 1.4rem;
-            color: #333;
+#movies .movie-list .card .card-body p {
+  font-size: 1.4rem;
+  color: #333;
+}
 
-            &::first-letter {
-              font-size: 1.8rem;
-            }
-          }
-        }
+#movies .movie-list .card .card-body p::first-letter {
+  font-size: 1.8rem;
+}
 
-        .card-title {
-          font-size: 2.4rem;
-          margin-bottom: 0.8rem;
-        }
+#movies .movie-list .card .card-title {
+  font-size: 2.4rem;
+  margin-bottom: 0.8rem;
+}
 
-        .info-container {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          margin-bottom: 1.6rem;
+#movies .movie-list .card .info-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.6rem;
+}
 
-          .imdb-rating {
-            font-size: 1.4rem;
-            font-weight: bold;
-            color: #f5c518;
-          }
+#movies .movie-list .card .info-container .imdb-rating {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #f5c518;
+}
 
-          dl {
-            display: flex;
-            background-color: #333;
-            color: #fff;
-            gap: 1.2rem;
-            padding: 1.4rem 1.8rem;
-            width: fit-content;
-            border-radius: 2.4rem;
+#movies .movie-list .card .info-container dl {
+  display: flex;
+  background-color: #333;
+  color: #fff;
+  gap: 1.2rem;
+  padding: 1.4rem 1.8rem;
+  width: fit-content;
+  border-radius: 2.4rem;
+}
 
-            dt {
-              font-weight: bold;
-            }
-          }
-        }
-      }
-    }
-  }
+#movies .movie-list .card .info-container dl dt {
+  font-weight: bold;
+}
 
-  #moods {
-    .mood-list {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      row-gap: 1.6rem;
-      column-gap: 1rem;
+#moods .mood-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.6rem;
+  column-gap: 1rem;
+}
 
-      .mood {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+#moods .mood-list .mood {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-        h3 {
-          font-size: 2.4rem;
-          margin-bottom: 1.6rem;
-        }
-      }
-    }
-  }
+#moods .mood-list .mood h3 {
+  font-size: 2.4rem;
+  margin-bottom: 1.6rem;
+}
 
-  #neighbor {
-    .neighbor-details {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2rem;
+#neighbor .neighbor-details {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
 
-      img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 1rem;
-        box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
-      }
+#neighbor .neighbor-details img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 1rem;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
+}
 
-      .facts-content {
-        margin-left: 4.4rem;
+#neighbor .neighbor-details .facts-content {
+  margin-left: 4.4rem;
+}
 
-        h3 {
-          font-size: 2.4rem;
-          margin-bottom: 2rem;
-          font-family: Arial, Helvetica, sans-serif;
-        }
+#neighbor .neighbor-details .facts-content h3 {
+  font-size: 2.4rem;
+  margin-bottom: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-        ul {
-          display: flex;
-          flex-direction: column;
-          gap: 0.5rem;
-          align-items: flex-start;
-          list-style: none;
+#neighbor .neighbor-details .facts-content ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: flex-start;
+  list-style: none;
+}
 
-          li {
-            font-size: 1.4rem;
-            font-weight: 500;
-            color: #333;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 0.5rem;
-            padding: 0.5rem 1rem;
-            box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
-            margin-bottom: 0.5rem;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            transition: transform 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+#neighbor .neighbor-details .facts-content ul li {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #333;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
 
-            &:hover {
-              transform: scale(1.1);
-            }
+#neighbor .neighbor-details .facts-content ul li:hover {
+  transform: scale(1.1);
+}
 
-            &::before {
-              content: "\2713";
-              display: inline-block;
-              font-weight: bold;
-              color: #4caf50;
-              margin-right: 1rem;
-              font-size: 1.6rem;
-            }
-          }
-        }
-      }
-    }
-  }
+#neighbor .neighbor-details .facts-content ul li::before {
+  content: "\2713";
+  display: inline-block;
+  font-weight: bold;
+  color: #4caf50;
+  margin-right: 1rem;
+  font-size: 1.6rem;
 }
 
 @media screen and (max-width: 44em) {
-  .section-tabs {
-    #movies > .movie-list,
-    #neighbor > .neighbor-details {
-      display: grid;
-      grid-template-columns: 1fr;
-    }
+  #movies .movie-list,
+  #neighbor .neighbor-details {
+    grid-template-columns: 1fr;
+  }
 
-    #neighbor {
-      .neighbor-details {
-        .facts-content {
-          margin-left: 0;
-        }
-      }
-    }
+  #neighbor .neighbor-details .facts-content {
+    margin-left: 0;
   }
 }
