--- a/css/general.css
+++ b/css/general.css
@@ -35,6 +35,11 @@ footer {
   padding-block: 2.4rem;
 }
 
+a {
+  text-decoration: none;
+  color: #555;
+}
+
 .validator-container {
   display: flex;
   gap: 2.4rem;
@@ -125,6 +130,39 @@ footer {
 .btn-back:hover::after {
   width: 100%;
   transform-origin: left;
+}
+
+.btn {
+  border-radius: 0.5rem;
+  width: 100%;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  padding-block: 0.8rem;
+  border: 0.1rem solid rgb(235, 235, 235);
+}
+
+.btn-primary {
+  background-color: #fff;
+}
+
+.btn-secondary {
+  background-color: #000;
+  color: #fff;
+  font-size: 1.6rem;
+}
+
+.form-input {
+  border-radius: 0.5rem;
+  width: 100%;
+  outline: none;
+  padding: 1.2rem 1.4rem;
+  border: 0.1rem solid rgb(235, 235, 235);
+}
+
+.form-input::placeholder {
+  color: rgb(188, 174, 176);
+  font-size: 1.4rem;
 }
 
 @media screen and (max-width: 44em) {
