--- a/css/general.css
+++ b/css/general.css
@@ -139,11 +139,17 @@ a {
   outline: none;
   cursor: pointer;
   padding-block: 0.8rem;
+  height: 4.6rem;
   border: 0.1rem solid rgb(235, 235, 235);
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .btn-primary {
   background-color: #fff;
+}
+
+.btn-primary:hover {
+  background-color: rgb(241, 238, 238);
 }
 
 .btn-secondary {
@@ -152,12 +158,20 @@ a {
   font-size: 1.6rem;
 }
 
+.btn-secondary:hover {
+  background-color: #191919;
+}
+
 .form-input {
   border-radius: 0.5rem;
   width: 100%;
   outline: none;
   padding: 1.2rem 1.4rem;
   border: 0.1rem solid rgb(235, 235, 235);
+}
+
+.form-input:focus {
+  border: 0.1rem solid rgb(79, 79, 79);
 }
 
 .form-input::placeholder {
