--- a/css/general.css
+++ b/css/general.css
@@ -140,6 +140,7 @@ a {
   cursor: pointer;
   padding-block: 0.8rem;
   height: 4.6rem;
+  font-size: 1.6rem;
   border: 0.1rem solid rgb(235, 235, 235);
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
@@ -155,33 +156,190 @@ a {
 .btn-secondary {
   background-color: #000;
   color: #fff;
-  font-size: 1.6rem;
 }
 
 .btn-secondary:hover {
   background-color: #191919;
 }
 
-.form-input {
+.btn-tertiary {
+  background-color: rgb(14, 110, 253);
+  color: #fff;
+}
+
+.btn-tertiary:hover {
+  background-color: rgb(15, 95, 215);
+}
+
+.btn-gray {
+  background-color: rgb(251, 251, 252);
+  color: rgb(77, 81, 87);
+}
+
+.btn-gray:hover {
+  background-color: rgb(225, 225, 230);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
+form .field-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+}
+
+form .field-container .field-label {
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.field-label-primary {
+  color: rgb(159, 152, 153);
+}
+
+.field-label-secondary {
+  color: rgb(33, 37, 41);
+}
+
+.form-input,
+.form-select {
   border-radius: 0.5rem;
   width: 100%;
   outline: none;
   padding: 1.2rem 1.4rem;
+  height: 4.6rem;
+}
+
+.form-select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 0.5rem;
+}
+
+.form-select option[value=""][disabled] {
+  color: gray !important;
+}
+
+.form-input-primary,
+.form-select-primary {
   border: 0.1rem solid rgb(235, 235, 235);
 }
 
-.form-input:focus {
+.form-input-primary:focus,
+.form-select-primary:focus {
   border: 0.1rem solid rgb(79, 79, 79);
 }
 
-.form-input::placeholder {
+.form-input-primary::placeholder,
+.form-select-primary::placeholder {
   color: rgb(188, 174, 176);
   font-size: 1.4rem;
+}
+
+.form-input-secondary,
+.form-select-secondary {
+  font-size: 1.6rem;
+  border: 0.2rem solid rgb(230, 233, 236);
+}
+
+.form-input-secondary:focus,
+.form-select-secondary:focus {
+  border: 0.2rem solid rgb(68, 67, 67);
+}
+
+.form-input-secondary::placeholder,
+.form-select-secondary::placeholder {
+  color: rgb(131, 123, 113);
+  font-size: 1.6rem;
+}
+
+.bg-white {
+  background-color: #fff;
+}
+
+nav {
+  background-color: #fff;
+  padding: 1.4rem 2.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav .left-nav {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+nav .left-nav img {
+  height: 4.2rem;
+}
+
+nav .left-nav h1::before {
+  content: "";
+  border-left: 0.15rem solid #555;
+  margin-right: 1rem;
+}
+
+nav .left-nav h1 {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: rgb(64, 64, 64);
+}
+
+nav .right-nav {
+  display: flex;
+  align-items: center;
+  gap: 1.8rem;
+}
+
+nav .right-nav a {
+  font-size: 1.4rem;
+  color: rgb(118, 118, 118);
+  position: relative;
+}
+
+nav .right-nav a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -0.6rem;
+  width: 0%;
+  height: 0.1rem;
+  background: #454444;
+  transition: width 0.3s ease-out;
+  transform-origin: right;
+}
+
+nav .right-nav a:hover::after {
+  width: 100%;
+  transform-origin: left;
 }
 
 @media screen and (max-width: 44em) {
   html {
     /* 56.25% === 9px */
     font-size: 50%;
+  }
+
+  nav .left-nav h1::before {
+    border: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 25em) {
+  nav .right-nav {
+    display: none;
   }
 }
