--- a/lab3/css/login.css
+++ b/lab3/css/login.css
@@ -1,61 +1,3 @@
-nav {
-  background-color: #fff;
-  padding: 1.4rem 2.2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-nav .left-nav {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-nav .left-nav img {
-  height: 4.2rem;
-}
-
-nav .left-nav h1::before {
-  content: "";
-  border-left: 0.15rem solid #555;
-  margin-right: 1rem;
-}
-
-nav .left-nav h1 {
-  font-size: 1.6rem;
-  font-weight: 600;
-  color: rgb(64, 64, 64);
-}
-
-nav .right-nav {
-  display: flex;
-  gap: 1.8rem;
-}
-
-nav .right-nav a {
-  font-size: 1.4rem;
-  color: rgb(118, 118, 118);
-  position: relative;
-}
-
-nav .right-nav a::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -0.6rem;
-  width: 0%;
-  height: 0.1rem;
-  background: #454444;
-  transition: width 0.3s ease-out;
-  transform-origin: right;
-}
-
-nav .right-nav a:hover::after {
-  width: 100%;
-  transform-origin: left;
-}
-
 main {
   background-color: #f3f3f3;
 }
@@ -135,24 +77,6 @@ main {
 .section-login .login-content .login-container .separator span {
   color: rgb(188, 174, 176);
   font-size: 1.2rem;
-}
-
-.section-login .login-content .login-container form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.4rem;
-}
-
-.section-login .login-content .login-container form .field-container {
-  display: flex;
-  flex-direction: column;
-  gap: 0.6rem;
-}
-
-.section-login .login-content .login-container form .field-container label {
-  font-size: 1.6rem;
-  font-weight: 400;
-  color: rgb(159, 152, 153);
 }
 
 .section-login .login-content .login-container form .login-actions-container {
@@ -247,6 +171,7 @@ footer p {
   color: rgb(188, 174, 176);
 }
 
+/** 944px */
 @media screen and (max-width: 59em) {
   .section-login .login-content .login-container {
     width: 90%;
@@ -258,12 +183,8 @@ footer p {
   }
 }
 
+/** 704px */
 @media screen and (max-width: 44em) {
-  nav .left-nav h1::before {
-    border: 0;
-    margin: 0;
-  }
-
   .section-welcome h2 {
     font-size: 2.8rem;
   }
@@ -291,11 +212,8 @@ footer p {
   }
 }
 
+/** 400px */
 @media screen and (max-width: 25em) {
-  nav .right-nav {
-    display: none;
-  }
-
   footer {
     flex-direction: column;
     align-items: flex-start;
